<resources>
    <string name="app_name">assignment2</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="borrow">Borrow</string>
    <string name="name">Name</string>
    <string name="credit">Credit</string>
    <string name="textView">Text</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_rate">Confirm</string>
    <string name="cancel_rate">Cancel</string>

</resources>